# CSD-JWT

./: Cargo.toml  README.md
src/: accumulator.rs  csd.rs  main.rs  state.rs
src/csd/: csd_decoder.rs  csd_disclosure.rs  csd_encoder.rs  csd_error.rs  csd_jwt.rs
src/results/: paper_plots.ipynb
src/results/raw_data/: Issuer generation time in microseco.txt  Parallel Verification Time.txt  Sequential Verification Time.txt  Simulated size of generated VC.txt  Simulated size of generated VP.txt
